--- a/templates/dingcan/dingcan_list.html
+++ b/templates/dingcan/dingcan_list.html
@@ -41,7 +41,7 @@
 				{% endfor %}
 			</dl>
 {#			<button >开点</button>#}
-            <a class="dc_bth" href="{% url "dingcan_new" %}">开点</a>
+            <a class="dc_bth" href="{% url "dingcan_new" %}">开始点餐</a>
 		</div>
 
 	</body>
