--- a/templates/dingcan/admin_display.html
+++ b/templates/dingcan/admin_display.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>乐蜀点餐统计</title>
 	</head>
-	<link rel="stylesheet" type="text/css" href="http://pythonic.in/static/dingcan/index.css"/>
+	<link rel="stylesheet" type="text/css" href="/static/dingcan/index.css"/>
 	<body>
 		<div class="contentAll">
 			<h1>乐蜀点餐统计:</h1>
